# udisken

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ACKNOWLEDGMENTS  LICENSE  NOTICE  README.md  REUSE.toml  TODO.md  meson.build  meson.options  udisken.service
LICENSES/: 0BSD.txt  Apache-2.0.txt  GPL-3.0-or-later.txt  LGPL-2.0-or-later.txt
common/: globals.hpp  interfaces.cpp  interfaces.hpp  managers.cpp  managers.hpp  meson.build  objects.cpp  objects.hpp  utilities.cpp  utilities.hpp
dbus/: org.freedesktop.UDisks2.xml.license
docs/: BUILDING.md
src/: block.cpp  block.hpp  conversions.cpp  conversions.hpp  drive.cpp  drive.hpp  filesystem.cpp  filesystem.hpp  filesystem_proxy.cpp  filesystem_proxy.hpp  globals.hpp  interfaces.cpp  interfaces.hpp  main.cpp  manager.cpp  manager.hpp  manager_proxy.hpp  managers.cpp  managers.hpp  meson.build  mount.cpp  mount.hpp  notify.cpp  notify.hpp  objects.cpp  objects.hpp  options.cpp  options.hpp  proxies.cpp  proxies.hpp  proxy.cpp  proxy.hpp  udisks.cpp  udisks.hpp  udisks_block.hpp  udisks_drive.cpp  udisks_filesystem.cpp  udisks_filesystem.hpp  udisks_globals.hpp  udisks_manager.cpp  (+3 more)
udisken/: main.cpp  meson.build
udiskend/: main.cpp  meson.build
